--- a/ui/Options.ui
+++ b/ui/Options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>494</width>
-    <height>495</height>
+    <height>529</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -173,14 +173,21 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="searchPkcs11">
+          <property name="text">
+           <string>Search</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>20</width>
-            <height>40</height>
+            <width>77</width>
+            <height>17</height>
            </size>
           </property>
          </spacer>
