--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -562,12 +562,6 @@ If this list is disabled, you only can create a self-signed certificate.</string
               <attribute name="horizontalHeaderStretchLastSection">
                <bool>true</bool>
               </attribute>
-              <attribute name="horizontalHeaderStretchLastSection">
-               <bool>true</bool>
-              </attribute>
-              <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>200</number>
-              </attribute>
              </widget>
             </item>
             <item>
@@ -925,24 +919,53 @@ It also copies the issuer and serial number from the issuer certificate. Normall
         </spacer>
        </item>
        <item>
-        <layout class="QGridLayout" name="_8">
-         <item row="3" column="0">
-          <widget class="QLabel" name="TextLabel1_2_3_2_2_3">
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="TextLabel1_2_2_3">
            <property name="toolTip">
-            <string>Authority Info Access</string>
+            <string>subject alternative name</string>
            </property>
            <property name="text">
-            <string notr="true">Authority Info Access</string>
+            <string notr="true">subject alternative name</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="TextLabel1_2_3_2_3">
-           <property name="toolTip">
-            <string>CRL distribution point</string>
+         <item row="0" column="1">
+          <widget class="QLabel" name="subAltIco">
+           <property name="minimumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
            </property>
            <property name="text">
-            <string notr="true">CRL distribution point</string>
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2" colspan="2">
+          <widget class="QLineEdit" name="subAltName">
+           <property name="toolTip">
+            <string>DNS: IP: URI: email: RID:</string>
+           </property>
+           <property name="whatsThis">
+            <string>The subject alternative name extension allows various literal values to be used. These include &quot;email&quot; (an email address) , &quot;URI&quot; a uniform resource indicator, &quot;DNS&quot; (a DNS domain name) , RID (a registered ID: OBJECT IDENTIFIER) and IP (an IP address).
+Examples:
+email:my@other.address, IP: 1.1.1.1 , URI:http://my.url.here/
+email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4">
+          <widget class="QPushButton" name="editSubAlt">
+           <property name="text">
+            <string>Edit</string>
            </property>
           </widget>
          </item>
@@ -956,7 +979,56 @@ It also copies the issuer and serial number from the issuer certificate. Normall
            </property>
           </widget>
          </item>
-         <item row="2" column="1" colspan="2">
+         <item row="1" column="2" colspan="2">
+          <widget class="QLineEdit" name="issAltName">
+           <property name="toolTip">
+            <string>DNS: IP: URI: email: RID:</string>
+           </property>
+           <property name="whatsThis">
+            <string>The issuer alternative name extension allows various literal values to be used. These include &quot;email&quot; (an email address) , &quot;URI&quot; a uniform resource indicator, &quot;DNS&quot; (a DNS domain name), RID (a registered ID: OBJECT IDENTIFIER) and IP (an IP address).
+Examples:
+email:my@other.address, IP: 1.1.1.1 , URI:http://my.url.here/
+email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="4">
+          <widget class="QPushButton" name="editIssAlt">
+           <property name="text">
+            <string>Edit</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="TextLabel1_2_3_2_3">
+           <property name="toolTip">
+            <string>CRL distribution point</string>
+           </property>
+           <property name="text">
+            <string notr="true">CRL distribution point</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLabel" name="crlDistIco">
+           <property name="minimumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2" colspan="2">
           <widget class="QLineEdit" name="crlDist">
            <property name="toolTip">
             <string>URI:</string>
@@ -972,28 +1044,50 @@ URI:http://www.my.com/my.crl, URI:http://www.oth.com/my.crl</string>
            </property>
           </widget>
          </item>
+         <item row="2" column="4">
+          <widget class="QPushButton" name="editCrlDist">
+           <property name="text">
+            <string>Edit</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="TextLabel1_2_3_2_2_3">
+           <property name="toolTip">
+            <string>Authority Info Access</string>
+           </property>
+           <property name="text">
+            <string notr="true">Authority Info Access</string>
+           </property>
+          </widget>
+         </item>
          <item row="3" column="1">
+          <widget class="QLabel" name="authInfAccIco">
+           <property name="minimumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2">
           <widget class="QComboBox" name="aiaOid">
            <property name="toolTip">
             <string>can be altered by the file &quot;aia.txt&quot;</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="3">
-          <widget class="QPushButton" name="editSubAlt">
-           <property name="text">
-            <string>Edit</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="3">
-          <widget class="QPushButton" name="editIssAlt">
-           <property name="text">
-            <string>Edit</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="2">
+         <item row="3" column="3">
           <widget class="QLineEdit" name="authInfAcc">
            <property name="toolTip">
             <string>DNS: IP: URI: email: RID:</string>
@@ -1008,53 +1102,29 @@ caIssuers;URI:http://my.ca/ca.html</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1" colspan="2">
-          <widget class="QLineEdit" name="subAltName">
-           <property name="toolTip">
-            <string>DNS: IP: URI: email: RID:</string>
-           </property>
-           <property name="whatsThis">
-            <string>The subject alternative name extension allows various literal values to be used. These include &quot;email&quot; (an email address) , &quot;URI&quot; a uniform resource indicator, &quot;DNS&quot; (a DNS domain name) , RID (a registered ID: OBJECT IDENTIFIER) and IP (an IP address).
-Examples:
-email:my@other.address, IP: 1.1.1.1 , URI:http://my.url.here/
-email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="3">
-          <widget class="QPushButton" name="editCrlDist">
-           <property name="text">
-            <string>Edit</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="TextLabel1_2_2_3">
-           <property name="toolTip">
-            <string>subject alternative name</string>
-           </property>
-           <property name="text">
-            <string notr="true">subject alternative name</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="3">
+         <item row="3" column="4">
           <widget class="QPushButton" name="editAuthInfAcc">
            <property name="text">
             <string>Edit</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1" colspan="2">
-          <widget class="QLineEdit" name="issAltName">
-           <property name="toolTip">
-            <string>DNS: IP: URI: email: RID:</string>
+         <item row="1" column="1">
+          <widget class="QLabel" name="issAltIco">
+           <property name="minimumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
            </property>
-           <property name="whatsThis">
-            <string>The issuer alternative name extension allows various literal values to be used. These include &quot;email&quot; (an email address) , &quot;URI&quot; a uniform resource indicator, &quot;DNS&quot; (a DNS domain name), RID (a registered ID: OBJECT IDENTIFIER) and IP (an IP address).
-Examples:
-email:my@other.address, IP: 1.1.1.1 , URI:http://my.url.here/
-email:my@other.address, RID:1.2.3.4, DNS: ns.server.tld</string>
+           <property name="maximumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
            </property>
           </widget>
          </item>
