--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -847,10 +847,10 @@ It also copies the issuer and serial number from the issuer certificate. Normall
              <string>Time range</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_2">
-             <item row="0" column="0">
+             <item row="0" column="0" colspan="2">
               <widget class="QLineEdit" name="validNumber"/>
              </item>
-             <item row="0" column="1">
+             <item row="0" column="2">
               <widget class="QComboBox" name="validRange">
                <item>
                 <property name="text">
@@ -869,7 +869,7 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </item>
               </widget>
              </item>
-             <item row="0" column="2">
+             <item row="0" column="3">
               <widget class="QPushButton" name="applyTime">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -892,7 +892,14 @@ It also copies the issuer and serial number from the issuer certificate. Normall
                </property>
               </widget>
              </item>
-             <item row="1" column="1" colspan="2">
+             <item row="1" column="1">
+              <widget class="QCheckBox" name="checkBox">
+               <property name="text">
+                <string>Local time</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2" colspan="2">
               <widget class="QCheckBox" name="noWellDefinedExpDate">
                <property name="text">
                 <string>No well-defined expiration</string>
@@ -919,7 +926,7 @@ It also copies the issuer and serial number from the issuer certificate. Normall
         </spacer>
        </item>
        <item>
-        <layout class="QGridLayout" name="gridLayout">
+        <layout class="QGridLayout" name="gridLayout_12">
          <item row="0" column="0">
           <widget class="QLabel" name="TextLabel1_2_2_3">
            <property name="toolTip">
@@ -1575,6 +1582,7 @@ caIssuers;URI:http://my.ca/ca.html</string>
    <container>1</container>
    <slots>
     <slot>hideTimeCheck(int)</slot>
+    <slot>localTime(int)</slot>
    </slots>
   </customwidget>
   <customwidget>
@@ -1688,12 +1696,12 @@ caIssuers;URI:http://my.ca/ca.html</string>
    <slot>deleteCurrentRow()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>678</x>
-     <y>309</y>
+     <x>622</x>
+     <y>284</y>
     </hint>
     <hint type="destinationlabel">
-     <x>131</x>
-     <y>280</y>
+     <x>57</x>
+     <y>251</y>
     </hint>
    </hints>
   </connection>
@@ -1704,12 +1712,12 @@ caIssuers;URI:http://my.ca/ca.html</string>
    <slot>addKvRow()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>678</x>
-     <y>277</y>
+     <x>622</x>
+     <y>252</y>
     </hint>
     <hint type="destinationlabel">
-     <x>131</x>
-     <y>280</y>
+     <x>57</x>
+     <y>251</y>
     </hint>
    </hints>
   </connection>
@@ -1806,6 +1814,54 @@ caIssuers;URI:http://my.ca/ca.html</string>
     <hint type="destinationlabel">
      <x>405</x>
      <y>566</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>notAfter</receiver>
+   <slot>localTime(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>451</x>
+     <y>329</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>290</x>
+     <y>328</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox</sender>
+   <signal>stateChanged(int)</signal>
+   <receiver>notBefore</receiver>
+   <slot>localTime(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>459</x>
+     <y>337</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>268</x>
+     <y>301</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>midnightCB</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>checkBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>350</x>
+     <y>333</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>447</x>
+     <y>337</y>
     </hint>
    </hints>
   </connection>
