Differentiate between invalid and undefined date
Undefined end dates are described in RFC-5280
Invalid dates should never ever arise in certificates.

Add configuration option to disable the colorization of expired dates.

--- a/ui/Options.ui
+++ b/ui/Options.ui
@@ -136,6 +136,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="noColorize">
+     <property name="text">
+      <string>Don't colorize expired certificates</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>PKCS#11 provider</string>
