--- a/ui/CertExtend.ui
+++ b/ui/CertExtend.ui
@@ -160,7 +160,7 @@
        <property name="title">
         <string>Time range</string>
        </property>
-       <layout class="QGridLayout" name="gridLayout">
+       <layout class="QGridLayout" name="gridLayout_1">
         <item row="0" column="0" colspan="2">
          <widget class="QLineEdit" name="validNumber"/>
         </item>
