--- a/ui/PwDialog.ui
+++ b/ui/PwDialog.ui
@@ -7,12 +7,12 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>258</height>
+    <height>264</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout">
+    <layout class="QHBoxLayout" name="layout">
      <property name="spacing">
       <number>6</number>
      </property>
@@ -35,7 +35,7 @@
       </widget>
      </item>
      <item>
-      <spacer>
+      <spacer name="spc">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -72,14 +72,13 @@
     </layout>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QVBoxLayout" name="verticalLayout">
+    <widget class="QFrame" name="frame_2">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QLabel" name="description">
-        <property name="wordWrap">
-         <bool>true</bool>
-        </property>
-       </widget>
+       <widget class="QLabel" name="description"/>
       </item>
      </layout>
     </widget>
