SF Bug #87: Unable to set default key length
Added a "Remember as default" checkbox to the key input dialog.
The default key size is now 2048 for RSA and DSA keys.

--- a/ui/NewKey.ui
+++ b/ui/NewKey.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>449</width>
-    <height>297</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -180,6 +180,13 @@
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="rememberDefault">
+     <property name="text">
+      <string>Remember as default</string>
+     </property>
     </widget>
    </item>
    <item>
