--- a/ui/Revoke.ui
+++ b/ui/Revoke.ui
@@ -14,7 +14,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Revokation details</string>
+      <string>Revocation details</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
@@ -41,7 +41,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Revokation reason</string>
+         <string>Revocation reason</string>
         </property>
        </widget>
       </item>
