--- a/ui/ExportDialog.ui
+++ b/ui/ExportDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>510</width>
-    <height>277</height>
+    <height>314</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -91,7 +91,38 @@
     </spacer>
    </item>
    <item>
-    <widget class="QFrame" name="frame_2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="TextLabel2">
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="descr">
+       <property name="toolTip">
+        <string>The internal name of the CRL in the database</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>4</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QFrame" name="fileNameFrame">
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
@@ -151,7 +182,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QFrame" name="frame">
+    <widget class="QFrame" name="exportFormatFrame">
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
