--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>712</width>
-    <height>613</height>
+    <height>634</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -116,8 +116,7 @@
               <number>6</number>
              </property>
              <item row="0" column="1">
-              <widget class="QComboBox" name="reqList">
-              </widget>
+              <widget class="QComboBox" name="reqList"/>
              </item>
              <item row="1" column="1">
               <widget class="QPushButton" name="showReqBut">
@@ -390,13 +389,7 @@
       <attribute name="title">
        <string>Subject</string>
       </attribute>
-      <layout class="QVBoxLayout">
-       <property name="spacing">
-        <number>6</number>
-       </property>
-       <property name="margin">
-        <number>9</number>
-       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_7">
        <item>
         <widget class="QGroupBox" name="distNameBox">
          <property name="toolTip">
@@ -405,136 +398,9 @@
          <property name="title">
           <string notr="true">Distinguished name</string>
          </property>
-         <layout class="QVBoxLayout" name="_2">
+         <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
-           <layout class="QGridLayout" name="_3">
-            <item row="3" column="3">
-             <widget class="QLineEdit" name="emailAddress">
-              <property name="maxLength">
-               <number>60</number>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <widget class="QLabel" name="LorganisationName">
-              <property name="toolTip">
-               <string>Organisation</string>
-              </property>
-              <property name="buddy">
-               <cstring>organisationName</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLineEdit" name="description">
-              <property name="toolTip">
-               <string>This name is only used internally and does not appear in the resulting certificate</string>
-              </property>
-              <property name="maxLength">
-               <number>100</number>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="countryName">
-              <property name="toolTip">
-               <string>Must be exactly 2 letter of size (DE, UK)</string>
-              </property>
-              <property name="maxLength">
-               <number>2</number>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="3">
-             <widget class="QLineEdit" name="commonName">
-              <property name="maxLength">
-               <number>64</number>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="LcountryName">
-              <property name="toolTip">
-               <string>Country code</string>
-              </property>
-              <property name="buddy">
-               <cstring>countryName</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="LstateOrProvinceName">
-              <property name="toolTip">
-               <string>State or Province</string>
-              </property>
-              <property name="buddy">
-               <cstring>stateOrProvinceName</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QLineEdit" name="stateOrProvinceName"/>
-            </item>
-            <item row="3" column="0">
-             <widget class="QLabel" name="LlocalityName">
-              <property name="toolTip">
-               <string>Locality</string>
-              </property>
-              <property name="buddy">
-               <cstring>localityName</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QLabel" name="LorganisationalUnitName">
-              <property name="toolTip">
-               <string>Organisational unit</string>
-              </property>
-              <property name="buddy">
-               <cstring>organisationalUnitName</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="2">
-             <widget class="QLabel" name="LemailAddress">
-              <property name="toolTip">
-               <string>E-Mail address</string>
-              </property>
-              <property name="buddy">
-               <cstring>emailAddress</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="1">
-             <widget class="QLineEdit" name="localityName"/>
-            </item>
-            <item row="1" column="3">
-             <widget class="QLineEdit" name="organisationalUnitName"/>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="TextLabel1_3_2_2">
-              <property name="text">
-               <string>Internal name</string>
-              </property>
-              <property name="buddy">
-               <cstring>description</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3">
-             <widget class="QLineEdit" name="organisationName"/>
-            </item>
-            <item row="2" column="2">
-             <widget class="QLabel" name="LcommonName">
-              <property name="toolTip">
-               <string>Common name</string>
-              </property>
-              <property name="buddy">
-               <cstring>commonName</cstring>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="QWidget" name="dnWidget" native="true"/>
           </item>
           <item>
            <widget class="Line" name="Line1_2">
@@ -1562,37 +1428,38 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
   <tabstop>fromReqCB</tabstop>
   <tabstop>reqList</tabstop>
   <tabstop>copyReqExtCB</tabstop>
   <tabstop>showReqBut</tabstop>
+  <tabstop>reqSubChange</tabstop>
   <tabstop>selfSignRB</tabstop>
   <tabstop>serialNr</tabstop>
   <tabstop>foreignSignRB</tabstop>
   <tabstop>certList</tabstop>
+  <tabstop>hashAlgo</tabstop>
   <tabstop>tempList</tabstop>
+  <tabstop>applyExtensions</tabstop>
+  <tabstop>applySubject</tabstop>
   <tabstop>applyTemplate</tabstop>
-  <tabstop>description</tabstop>
-  <tabstop>countryName</tabstop>
-  <tabstop>stateOrProvinceName</tabstop>
-  <tabstop>localityName</tabstop>
-  <tabstop>organisationName</tabstop>
-  <tabstop>organisationalUnitName</tabstop>
-  <tabstop>commonName</tabstop>
-  <tabstop>emailAddress</tabstop>
+  <tabstop>extDNlist</tabstop>
   <tabstop>extDNadd</tabstop>
   <tabstop>extDNdel</tabstop>
   <tabstop>keyList</tabstop>
+  <tabstop>usedKeysToo</tabstop>
   <tabstop>genKeyBut</tabstop>
   <tabstop>basicCA</tabstop>
   <tabstop>basicPath</tabstop>
   <tabstop>bcCritical</tabstop>
   <tabstop>subKey</tabstop>
   <tabstop>authKey</tabstop>
+  <tabstop>notBefore</tabstop>
+  <tabstop>notAfter</tabstop>
   <tabstop>validNumber</tabstop>
-  <tabstop>validRange</tabstop>
   <tabstop>midnightCB</tabstop>
+  <tabstop>checkBox</tabstop>
+  <tabstop>noWellDefinedExpDate</tabstop>
+  <tabstop>validRange</tabstop>
   <tabstop>applyTime</tabstop>
   <tabstop>subAltName</tabstop>
   <tabstop>editSubAlt</tabstop>
@@ -1615,6 +1482,10 @@
   <tabstop>nsCaPolicyUrl</tabstop>
   <tabstop>nsSslServerName</tabstop>
   <tabstop>nsComment</tabstop>
+  <tabstop>nconf_data</tabstop>
+  <tabstop>adv_validate</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>tabWidget</tabstop>
  </tabstops>
  <resources/>
  <connections>
