--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -26,9 +26,6 @@
          <strikeout>false</strikeout>
         </font>
        </property>
-       <property name="text">
-        <string>Create</string>
-       </property>
       </widget>
      </item>
      <item>
@@ -71,7 +68,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tab_0">
       <attribute name="title">
@@ -525,7 +522,7 @@
        <item>
         <layout class="QHBoxLayout" name="_6">
          <item>
-          <widget class="QGroupBox" name="groupBox_8">
+          <widget class="QGroupBox" name="bcBox">
            <property name="toolTip">
             <string>Basic constraints</string>
            </property>
@@ -582,7 +579,7 @@
                <string>The basic constraints should always be critical</string>
               </property>
               <property name="text">
-               <string notr="true">&amp;Critical</string>
+               <string notr="true">Critical</string>
               </property>
              </widget>
             </item>
@@ -778,7 +775,7 @@
        <item>
         <layout class="QGridLayout" name="gridLayout_12">
          <item row="0" column="0">
-          <widget class="QLabel" name="TextLabel1_2_2_3">
+          <widget class="QLabel" name="sanLbl">
            <property name="toolTip">
             <string>subject alternative name</string>
            </property>
@@ -821,7 +818,7 @@
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="TextLabel1_2_2_2">
+          <widget class="QLabel" name="ianLbl">
            <property name="toolTip">
             <string>issuer alternative name</string>
            </property>
@@ -878,7 +875,7 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="TextLabel1_2_3_2_2_3">
+          <widget class="QLabel" name="aiaLbl">
            <property name="toolTip">
             <string>Authority Info Access</string>
            </property>
@@ -947,7 +944,7 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="TextLabel1_2_3_2_3">
+          <widget class="QLabel" name="crldpLbl">
            <property name="toolTip">
             <string>CRL distribution point</string>
            </property>
@@ -980,7 +977,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QGroupBox" name="groupBox_12">
+          <widget class="QGroupBox" name="kuBox">
            <property name="toolTip">
             <string>Key usage</string>
            </property>
@@ -997,7 +994,7 @@
             <item>
              <widget class="QCheckBox" name="kuCritical">
               <property name="text">
-               <string notr="true">&amp;Critical</string>
+               <string notr="true">Critical</string>
               </property>
              </widget>
             </item>
@@ -1060,7 +1057,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QGroupBox" name="groupBox_11">
+          <widget class="QGroupBox" name="ekuBox">
            <property name="toolTip">
             <string>Extended key usage</string>
            </property>
@@ -1077,7 +1074,7 @@
             <item>
              <widget class="QCheckBox" name="ekuCritical">
               <property name="text">
-               <string notr="true">C&amp;ritical</string>
+               <string notr="true">Critical</string>
               </property>
              </widget>
             </item>
@@ -1231,7 +1228,7 @@
           <widget class="QLineEdit" name="nsCaPolicyUrl"/>
          </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="TextLabel2_2_4">
+          <widget class="QLabel" name="nsCaRevLbl">
            <property name="toolTip">
             <string>CA Revocation URL</string>
            </property>
@@ -1244,7 +1241,7 @@
           <widget class="QLineEdit" name="nsSslServerName"/>
          </item>
          <item row="1" column="0">
-          <widget class="QLabel" name="TextLabel4_2_2_3">
+          <widget class="QLabel" name="nsRevLbl">
            <property name="toolTip">
             <string>Revocation URL</string>
            </property>
@@ -1254,7 +1251,7 @@
           </widget>
          </item>
          <item row="5" column="0">
-          <widget class="QLabel" name="TextLabel7_2_3">
+          <widget class="QLabel" name="nsSslServerLbl">
            <property name="toolTip">
             <string>SSL server name</string>
            </property>
@@ -1270,7 +1267,7 @@
           <widget class="QLineEdit" name="nsCARevocationUrl"/>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="TextLabel3_2_4">
+          <widget class="QLabel" name="nsRenewLbl">
            <property name="toolTip">
             <string>Certificate renewal URL</string>
            </property>
@@ -1280,7 +1277,7 @@
           </widget>
          </item>
          <item row="6" column="0">
-          <widget class="QLabel" name="TextLabel8">
+          <widget class="QLabel" name="nsCommentLbl">
            <property name="toolTip">
             <string>Comment</string>
            </property>
@@ -1290,7 +1287,7 @@
           </widget>
          </item>
          <item row="4" column="0">
-          <widget class="QLabel" name="TextLabel6_2_3">
+          <widget class="QLabel" name="nsCaPolicyLbl">
            <property name="toolTip">
             <string>CA policy URL</string>
            </property>
@@ -1300,7 +1297,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QLabel" name="TextLabel1_3_2_3">
+          <widget class="QLabel" name="nsBaseLbl">
            <property name="toolTip">
             <string>Base URL</string>
            </property>
@@ -1315,7 +1312,7 @@
          <item row="6" column="1">
           <widget class="QLineEdit" name="nsComment">
            <property name="toolTip">
-            <string>If you know a more pretty one tell me</string>
+            <string notr="true">If you know a more pretty one tell me</string>
            </property>
           </widget>
          </item>
@@ -1403,6 +1400,11 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>hashBox</class>
+   <extends>QComboBox</extends>
+   <header>widgets/hashBox.h</header>
+  </customwidget>
+  <customwidget>
    <class>Validity</class>
    <extends>QDateTimeEdit</extends>
    <header>widgets/validity.h</header>
@@ -1411,11 +1413,6 @@
     <slot>hideTimeCheck(int)</slot>
     <slot>localTime(int)</slot>
    </slots>
-  </customwidget>
-  <customwidget>
-   <class>hashBox</class>
-   <extends>QComboBox</extends>
-   <header>widgets/hashBox.h</header>
   </customwidget>
   <customwidget>
    <class>kvView</class>
